BOOKKEEPER-66: use IPv4 for builds (mmorel via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.0@1208470 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,8 @@ BUGFIXES:
  
  BOOKKEEPER-130: Add developer KEYS file to svn (ivank)
 
+ BOOKKEEPER-66: use IPv4 for builds (mmorel via ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
