BOOKKEEPER-132: Sign artifacts before deploying to maven (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1208487 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -42,6 +42,8 @@ Release 4.0.0 - 2011-11-30
       
       BOOKKEEPER-66: use IPv4 for builds (mmorel via ivank)
 
+      BOOKKEEPER-132: Sign artifacts before deploying to maven (ivank)
+
       bookkeeper-server/
 
         BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
