--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,8 @@ BUGFIXES:
 
  BOOKKEEPER-66: use IPv4 for builds (mmorel via ivank)
 
+ BOOKKEEPER-132: Sign artifacts before deploying to maven (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
