BOOKKEEPER-131: Fix zookeeper test dependency (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.0@1209236 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,8 @@ BUGFIXES:
 
  BOOKKEEPER-132: Sign artifacts before deploying to maven (ivank)
 
+ BOOKKEEPER-131: Fix zookeeper test dependency (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
