--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -44,6 +44,8 @@ Release 4.0.0 - 2011-11-30
 
       BOOKKEEPER-132: Sign artifacts before deploying to maven (ivank)
 
+      BOOKKEEPER-131: Fix zookeeper test dependency (ivank)
+
       bookkeeper-server/
 
         BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
