--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ BUGFIXES:
 
  BOOKKEEPER-131: Fix zookeeper test dependency (ivank)
 
+ BOOKKEEPER-134: Delete superfluous lib directories (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
