--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ BUGFIXES:
 
  BOOKKEEPER-134: Delete superfluous lib directories (ivank)
 
+ BOOKKEEPER-138: NOTICE.txt is invalid (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
