BOOKKEEPER-139: Binary packages do not carry NOTICE.txt (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.0@1209666 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,8 @@ BUGFIXES:
 
  BOOKKEEPER-138: NOTICE.txt is invalid (ivank)
 
+ BOOKKEEPER-139: Binary packages do not carry NOTICE.txt (ivank)
+
  bookkeeper-server/
 
   BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
