--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,8 @@ Release 4.0.0 - 2011-11-30
 
       BOOKKEEPER-138: NOTICE.txt is invalid (ivank)
 
+      BOOKKEEPER-139: Binary packages do not carry NOTICE.txt (ivank)
+
       bookkeeper-server/
 
         BOOKKEEPER-1: Static variable makes tests fail (fpj via ivank)
