BOOKKEEPER-40: BookieClientTest fails intermittantly (fpj via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1231187 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,7 +16,9 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-141: Run extracting ledger id from entry log files in GC thread to speed up bookie restart (Sijie Gou via ivank)
 
-	BOOKKEEPER-148: Jenkins build is failing (ivank via fpj)
+        BOOKKEEPER-148: Jenkins build is failing (ivank via fpj)
+
+        BOOKKEEPER-40: BookieClientTest fails intermittantly (fpj via ivank)
 
       hedwig-server/
       
