BOOKKEEPER-157. For small packets, increasing number of bookies actually degrades performance. (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1239167 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -40,6 +40,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-98: collect add/read statistics on bookie server (Sijie Guo via ivank)
 
+	BOOKKEEPER-157:	For small packets, increasing number of bookies actually degrades performance. (ivank via fpj)
+
 
 Release 4.0.0 - 2011-11-30
 
