BOOKKEEPER-162: LedgerHandle.readLastConfirmed does not work (fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1243462 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-156: BookieJournalRollingTest failing (Sijie Guo via ivank)
 
+	BOOKKEEPER-162: LedgerHandle.readLastConfirmed does not work (fpj)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
