BOOKKEEPER-152: Can't recover a ledger whose current ensemble contain failed bookie. (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1243539 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-162: LedgerHandle.readLastConfirmed does not work (fpj)
 
+        BOOKKEEPER-152: Can't recover a ledger whose current ensemble contain failed bookie. (ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
