--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -40,6 +40,8 @@ Trunk (unreleased changes)
 	
 	BOOKKEEPER-170: Bookie constructor starts a number of threads. (ivank via fpj)
 
+        BOOKKEEPER-169: bookie hangs on reading header when encountering partial header index file (sijie via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
