--- a/doc/bookkeeperConfig.textile
+++ b/doc/bookkeeperConfig.textile
@@ -14,7 +14,7 @@ Notice: Licensed under the Apache License, Version 2.0 (the "License");
 
 h1. Abstract
 
-This document contains information about deploying, administering and mantaining BookKeeper. It also discusses best practices and common problems. 
+This document contains information about deploying, administering and maintaining BookKeeper. It also discusses best practices and common problems. 
 
 h1. Running a BookKeeper instance
 
@@ -35,13 +35,29 @@ p. To run a bookie, we execute the following command:
 p. The configuration parameters can be set in bookkeeper-server/conf/bk_server.conf. 
 
 The important parameters are:
- * @bookiePort@, Port number that the bookie listens on; 
- * @zkServers@, Comma separated list of ZooKeeper servers with a hostname:port format; 
- * @journalDir@, Path for Log Device (stores bookie write-ahead log); 
- * @ledgerDir@, Path for Ledger Device (stores ledger entries); 
+
+* @bookiePort@, Port number that the bookie listens on; 
+* @zkServers@, Comma separated list of ZooKeeper servers with a hostname:port format; 
+* @journalDir@, Path for Log Device (stores bookie write-ahead log); 
+* @ledgerDir@, Path for Ledger Device (stores ledger entries); 
 
 p. Ideally, @journalDir@ and @ledgerDir@ are each in a different device. See "BookKeeper Configuration Parameters":./bookkeeperConfigParams.html for a full list of configuration parameters.
 
+h3. Upgrading
+
+From time to time, we may make changes to the filesystem layout of the bookie, which are incompatible with previous versions of bookkeeper and require that directories used with previous versions are upgraded. If you upgrade your bookkeeper software, and an upgrade is required, then the bookie will fail to start and print an error to the effect that an upgrade is required.
+
+BookKeeper provides a utility for doing the upgrade.
+@bookkeeper-server/bin/bookkeeper upgrade@
+
+The upgrade application takes 3 possible switches, @--upgrade@, @--rollback@ or @--finalize@. A normal upgrade process looks like.
+
+# @bookkeeper-server/bin/bookkeeper upgrade --upgrade@
+# @bookkeeper-server/bin/bookkeeper bookie@
+# Check everything is working. Kill bookie, ^C
+# If everything is ok, @bookkeeper-server/bin/bookkeeper upgrade --finalize@
+# Start bookie again @bookkeeper-server/bin/bookkeeper bookie@
+# If something is amiss, you can roll back the upgrade @bookkeeper-server/bin/bookkeeper upgrade --rollback@
 
 h3. Logging
 
