BOOKKEEPER-113: NPE In BookKeeper test (fpj via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1293383 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -46,6 +46,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-177: Index file is lost or some index pages aren't flushed. (sijie via ivank)
 
+        BOOKKEEPER-113: NPE In BookKeeper test (fpj via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
