BOOKKEEPER-74: Bookkeeper Persistence Manager should give up topic on error (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1295571 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-133: Hub server should update subscription state to zookeeper when losing topic or shutting down (Sijie Gou via ivank)
 
+        BOOKKEEPER-74: Bookkeeper Persistence Manager should give up topic on error (sijie via ivank)
+
     IMPROVEMENTS:
 
       bookkeeper-server/
