BOOKKEEPER-176: HierarchicalBookieFailureTest Hung (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1295604 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-113: NPE In BookKeeper test (fpj via ivank)
 
+	BOOKKEEPER-176: HierarchicalBookieFailureTest Hung (ivank via fpj)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
