BOOKKEEPER-185: Remove bookkeeper-server dependency on hadoop-common (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1300616 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -52,6 +52,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-180: bookie server doesn't quit when running out of disk space (sijie via ivank)
 
+        BOOKKEEPER-185: Remove bookkeeper-server dependency on hadoop-common (ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
