BOOKKEEPER-184: CompactionTest failing on Jenkins (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1300862 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-185: Remove bookkeeper-server dependency on hadoop-common (ivank)
 
+        BOOKKEEPER-184: CompactionTest failing on Jenkins (sijie via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
