--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -56,6 +56,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-184: CompactionTest failing on Jenkins (sijie via ivank)
 
+        BOOKKEEPER-182: Entry log file is overwritten when fail to read lastLogId. (sijie via ivank)
+
       hedwig-server/
       
         BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)
