BOOKKEEPER-96: extends zookeeper JMX to monitor and manage hedwig server (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1302392 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -94,6 +94,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-168: Message bounding on subscriptions (ivank)
 
+        BOOKKEEPER-96: extends zookeeper JMX to monitor and manage hedwig server (sijie via ivank)
+
       bookkeeper-benchmark/
 	BOOKKEEPER-158: Move latest benchmarking code into trunk (ivank via fpj)
 
