BOOKKEEPER-175: Bookie code is very coupled (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1302870 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -92,6 +92,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-187: Create well defined interface for LedgerCache (ivank)
 
+        BOOKKEEPER-175: Bookie code is very coupled (ivank)
+
       hedwig-server/
 
         BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
