BOOKKEEPER-188: Garbage collection code is in the wrong place (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1303286 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -94,6 +94,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-175: Bookie code is very coupled (ivank)
 
+        BOOKKEEPER-188: Garbage collection code is in the wrong place (ivank via sijie)
+
       hedwig-server/
 
         BOOKKEEPER-77: Add a console client for hedwig (Sijie Guo via ivank)
